# GTalentLens

./: .gitignore  Dockerfile  Dockerfile.tester  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt  test.ipynb  test.py
src/: test_cv_flow.py
src/infrastructure/: config.py  logger.py
src/infrastructure/db/: postgres.py
src/infrastructure/llm/prompts/: entities_extraction.py
src/infrastructure/llm/providers/: base.py  gateway.py  gemini.py
src/infrastructure/queue/: redis_queue.py
src/jobs/: text_jobs.py
src/orchestrator/: orchestrator.py
src/services/text_extractor/: base.py  image.py  pdf.py
src/workers/: entity_worker.py  text_jobs.py  text_worker.py
